# git-twigs

./: .cspell.json  README.md  pyproject.toml
.trunk/: trunk.yaml
.trunk/configs/: .prettierrc.yaml  .taplo.toml
git_twigs/: __init__.py  cli.py
tests/: test_cli.py
